<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Лабораторные работы</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title1">Лабораторные работы по дисциплине \"Программирование мобильных систем\"</string>
    <string name="title2">Выполнил студент группы 10МОА Пигарева О.</string>
    <string name="startButtonTitle1">Создание интерфейса из xml</string>
    <string name="startButtonTitle2">Создание интерфейса программно</string>
    <string name="title_activity_interface">InterfaceActivity</string>
    <string name="title_section1">Демонстрация стилей</string>
    <string name="title_section2">Демонстрация анимации</string>
    <string name="title_section3">Демонстрация Drawable</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="title_activity_main">Демонстрация интерфейса</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button1Text">New Button</string>
    <string name="button2text">New Button</string>
    <string name="button3text">Large Text</string>
    <string name="button4text">New Button</string>
    <string name="button5text">New Button</string>
    <string name="radio3">New RadioButton</string>
    <string name="radio2">New RadioButton</string>
    <string name="radio1">New RadioButton</string>
    <string name="toast1">Demonstration with xml resources</string>
    <string name="toast2">Demonstration with programmatically interface</string>
    <string name="title_activity_cvs">CVSActivity</string>
    <color name="color">#0377BE</color>

</resources>
